Fixing spacing for textareas and bottom border of panels

--- a/src/components/styles/Form.less
+++ b/src/components/styles/Form.less
@@ -86,5 +86,6 @@ p {
 }
 
 .row {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  line-height:100%
 }
